<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginPageActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/this_is_the_app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/finalapplogo" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:labelFor="@+id/usernameInputEditText"
        android:text="@string/username"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/usernameInputEditText"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <EditText
        android:id="@+id/usernameInputEditText"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:labelFor="@+id/passwordInputEditText"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/passwordInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <EditText
        android:id="@+id/passwordInputEditText"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputEditText" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/first_time_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>